<resources>
    <string name="app_name">Parallax3D</string>
    <string name="Demos">Demos</string>
    <string name="cube_texture">Cube and texture</string>
    <string name="different_geometries">Different Geometries</string>
    <string name="parametric_geometry">Parametric Geometry</string>
    <string name="moving_vertices">Moving Vertices</string>
    <string name="buffer_geometry">Buffer Geometry</string>
    <string name="buffered_particles">Buffered Particles</string>
    <string name="bump_mapping">Bump Mapping</string>
    <string name="skin_material">Skin Material</string>
</resources>
